--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,15 +1,96 @@
-.test {
-	padding: 0 25%;
+// font-family: 'Raleway', sans-serif; 
+// font-weight: 400, 500
+
+.container {
+	padding: 0 15%;
 }
 
 .navbar{
+	margin: 0;
+	padding-right: 10px;
 	ul{
 		li{
 			a{
 				text-transform: uppercase;
-				font-size: 0.8rem;
-				padding: 15px 5px;
+				font-size: 10px;
+				padding: 15px 5px; 
+				font-family: 'Raleway', sans-serif; 
+					span{
+						padding-left: 6px;
+						color: #8ece17;
+					}
 			}
 		}
 	}
+}
+
+.navbar-brand {
+	padding-top: 12px;
+	img {
+		height: 100%;
+  width: auto;
+	}
+}
+
+h2{
+	margin-top: 80px;
+	margin-bottom: 40px;
+	text-align: center;
+}
+
+.text-section-top, .text-section-bottom {
+	padding-left: 0;
+	p{
+		font-size: 1.5rem;
+		font-family: 'Raleway', sans-serif; 
+		padding-bottom: 20px;
+	}
+}
+
+
+
+@media (max-width: 880px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding: 6px !important;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
+    }
 }
