--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,10 @@
 // font-family: 'Raleway', sans-serif; 
 // font-weight: 400, 500
 
+*{
+	font-family: 'Raleway', sans-serif; 
+}
+
 .container {
 	padding: 0 15%;
 }
@@ -14,7 +18,6 @@
 				text-transform: uppercase;
 				font-size: 10px;
 				padding: 15px 5px; 
-				font-family: 'Raleway', sans-serif; 
 					span{
 						padding-left: 6px;
 						color: #8ece17;
@@ -28,7 +31,7 @@
 	padding-top: 12px;
 	img {
 		height: 100%;
-  width: auto;
+  	width: auto;
 	}
 }
 
@@ -42,11 +45,19 @@ h2{
 	padding-left: 0;
 	p{
 		font-size: 1.5rem;
-		font-family: 'Raleway', sans-serif; 
 		padding-bottom: 20px;
 	}
 }
 
+img {
+	padding-bottom: 15px;
+}
+
+.btn {
+	margin: 20px auto;
+	background-color: #8ece17;
+	display: block;
+}
 
 
 @media (max-width: 880px) {
