--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,10 @@
       color: #8ece17; }
 
 .navbar-brand {
-  padding-top: 12px; }
+  padding: 0; }
   .navbar-brand img {
-    height: 100%;
+    margin: 12px 0 0 5px;
+    height: 80%;
     width: auto; }
 
 h2 {
