--- a/css/styles.scss
+++ b/css/styles.scss
@@ -28,9 +28,11 @@
 }
 
 .navbar-brand {
-	padding-top: 12px;
+	
+	padding: 0;
 	img {
-		height: 100%;
+		margin: 12px 0 0 5px;
+		height: 80%;
   	width: auto;
 	}
 }
@@ -108,3 +110,4 @@ img {
        box-shadow: none;
     }
 }
+
